# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import checkoutRouter from "./checkout";
 import authRouter from "./auth";
 import webhookRouter from "./webhook";
+import contentsRouter from "./contents";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(checkoutRouter);
 router.use(authRouter);
 router.use(webhookRouter);
+router.use(contentsRouter);
 
 export default router;
